# Elite_Robots_CS_ROS2_Driver

./: README.md  README_CN.md
eli_cs_controllers/include/eli_cs_controllers/: scaled_joint_trajectory_controller.hpp
eli_cs_controllers/src/: freedrive_controller.cpp  scaled_joint_trajectory_controller.cpp
eli_cs_robot_description/urdf/: cs.ros2_control.xacro  cs.urdf.xacro  cs_macro.xacro
eli_cs_robot_driver/: CMakeLists.txt
eli_cs_robot_driver/config/: elite_cs_controllers.yaml
eli_cs_robot_driver/example/cpp/: safe_joint_move.cpp
eli_cs_robot_driver/example/launch/: example_forward_velocity_controller.launch.py  example_joint_trajectory_controller.launch.py  example_safe_joint_move.launch.py  example_scaled_joint_trajectory_controller.launch.py
eli_cs_robot_driver/example/python/: example_safe_joint_move.launch.py  example_safe_joint_move.py  safe_joint_move.py
eli_cs_robot_driver/include/eli_cs_robot_driver/: hardware_interface.hpp
eli_cs_robot_driver/launch/: elite_control.launch.py
eli_cs_robot_driver/src/: dashboard_client.cpp  hardware_interface.cpp
eli_cs_robot_moveit_config/config/: kinematics.yaml
eli_cs_robot_moveit_config/launch/: cs_moveit.launch.py
eli_cs_robot_simulation_gz/scripts/: gz_control.py
elite_kinematics/: CMakeLists.txt  kinematics_plugin.xml  package.xml
elite_kinematics/include/: Log.hpp
elite_kinematics/include/elite_kinematics/: kinematics_example1.hpp
elite_kinematics/src/: kinematics_example1.cpp
elite_moveit_kinematics/: CMakeLists.txt  kinematics_plugin_description.xml  package.xml
elite_moveit_kinematics/include/elite_moveit_kinematics/: elite_moveit_kinematics.hpp
elite_moveit_kinematics/src/: elite_moveit_kinematics.cpp
